--- a/contracts/package.json
+++ b/contracts/package.json
@@ -18,6 +18,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.2",
     "hardhat": "^2.7.1",
+    "hardhat-deploy": "^0.11.4",
     "web3": "^1.6.1"
   },
   "dependencies": {
