--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.15",
     "@usedapp/core": "^0.12.8",
     "axios": "^0.26.1",
+    "bignumber.js": "^9.0.2",
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
