--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "bignumber.js": "^9.0.2",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
