--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bignumber.js": "^9.0.2",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-data-table-component": "^7.5.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "rendition": "^27.1.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
